the same way imlib2_view and feh are doing it....  you dont actually see it
yet though...

-------------------------------------------------------------------------------

Fri Feb 11 17:51:24 CST 2000
(dphase)

Woooooo.... EE2 was giving me illegal instructions last night... scary...
turned out to be one of my CFLAGS....  anyway, the window resize should work
now...  before if you opened an image and then opened an image smaller than
the current image the window would not resize -- now it does.  its the
weekend now so expect the following things to be complete by sunday:

checkerboard background
image browser
ability to accept wildcards

-------------------------------------------------------------------------------

Fri Feb 11 18:19:03 CST 2000
(dphase)

sometimes you should compile before commiting.... typos and other screw ups
now fixed...

-------------------------------------------------------------------------------

Fri Feb 11 18:52:55 CST 2000
(dphase)

FINALLY!
Ok, ee2 is rendering a checkerboard behind the image now :)
still have a few issues with the checks and exposure events and some
resizing problems.... but that isnt really a major issue -- and its fairly
easy to fix.  off to work on that now :)

-------------------------------------------------------------------------------

Fri Feb 11 23:43:49 CST 2000
(dphase)

Added some stuff to the main menu

-------------------------------------------------------------------------------

Sun Feb 13 22:28:27 CST 2000
(dphase)

Damn. Didnt get as much accomplished this weekend as i wanted.... right now
the image browser is *almost* ready..  im commiting a big chunk of stuff,
but i have a seperate tree here im working on that i dont wont to commit at
the moment since it will break, well, everything (for the time being).  i
should get this up tomorrow - hopefully, but im going to quit setting dates
-- it never works :)

-------------------------------------------------------------------------------
