@@ -1,0 +1,13 @@
+bin_PROGRAMS = ee2
+
+ee2_SOURCES = 		\
+	ee2.h		\
+	ee2.c
+
+CFLAGS = `gtk-config --cflags` 
+
+ee2_LDFLAGS = `gtk-config --libs`
+
+EXTRA_DIST = 		\
+	ee2.png		\
+	ee2-alpha.png
