@@ -1,0 +1,17 @@
+dnl Process this file with autoconf to produce a configure script.
+
+AC_INIT(ee2.h)
+AM_INIT_AUTOMAKE(ee2, 0.1.0)
+
+AC_PROG_CC
+AM_PROG_CC_STDC
+AC_HEADER_STDC
+
+AM_PATH_GTK(1.2.0, ,AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))
+AC_CHECK_LIB(Imlib2, imlib_context_set_visual,,AC_MSG_ERROR(Cannot find Imlib2.))
+AC_CHECK_HEADER(Imlib2.h,,AC_MSG_ERROR(Cannot find Imlib2 header files.))
+
+AC_OUTPUT([
+Makefile
+])
+
