@@ -155,3 +155,8 @@ should get this up tomorrow - hopefully, but im going to quit setting dates
 
 -------------------------------------------------------------------------------
 
+Thu Feb 17 13:31:54 EST 2000
+(Christian)
+
+Added preliminary autoconf & autmake stuff.
+
